--- a/public/stylesheet/jquery.tag-editor.css
+++ b/public/stylesheet/jquery.tag-editor.css
@@ -1,18 +1,48 @@
 /* surrounding tag container */
-.tag-editor {
+/*.tag-editor {
     list-style-type: none; padding: 0 5px 0 0; margin: 0; overflow: hidden; border: 1px solid #eee; cursor: text;
     font: normal 14px sans-serif; color: #555; background: #fff; line-height: 20px;
+}*/
+.tag-editor {
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid #9e9e9e;
+    border-radius: 0;
+    outline: none;
+    height: 3rem;
+    width: 100%;
+    font-size: 1rem;
+    margin: 0 0 15px 0;
+    padding: 0;
+    box-shadow: none;
+    box-sizing: content-box;
+    transition: all 0.3s;
 }
 
 /* core styles usually need no change */
 .tag-editor li { display: block; float: left; overflow: hidden; margin: 3px 0; }
 .tag-editor div { float: left; padding: 0 4px; }
-.tag-editor .placeholder { padding: 0 8px; color: #bbb; }
+.tag-editor .placeholder { padding: 0px; 8px; color: #bbb; }
 .tag-editor .tag-editor-spacer { padding: 0; width: 8px; overflow: hidden; color: transparent; background: none; }
-.tag-editor input {
+/*.tag-editor input {
     vertical-align: inherit; border: 0; outline: none; padding: 0; margin: 0; cursor: text;
     font-family: inherit; font-weight: inherit; font-size: inherit; font-style: inherit;
     box-shadow: none; background: none; color: #444;
+}*/
+.tag-editor input {
+    background-color: transparent;
+    border: none;
+    border-bottom: 1px solid #9e9e9e;
+    border-radius: 0;
+    outline: none;
+    height: 3rem;
+    width: 100%;
+    font-size: 1rem;
+    margin: 0 0 15px 0;
+    padding: 0;
+    box-shadow: none;
+    box-sizing: content-box;
+    transition: all 0.3s;
 }
 /* hide original input field or textarea visually to allow tab navigation */
 .tag-editor-hidden-src { position: absolute !important; left: -99999px; }
