--- a/views/partials/post.hbs
+++ b/views/partials/post.hbs
@@ -20,8 +20,8 @@
                 {{/ifCond}}
                 <div class="row userInfoRow">
                     <div class="col s12 valign-wrapper">
-                        <a href="/users/{{id_user._id}}" class="">
-                            <span class="left">
+                        <a href="/users/{{id_user._id}}" class="" style="width:100%">
+                            <span class="left" style="width:100%">
                                 <img src="{{id_user.picture}}" alt="{{id_user.name}}" class="userImg circle responsive-img z-depth-2 left" height="35px" width="35px" />
                                 <div class="left userInfo">
                                     <div class="userInfoData userName">{{id_user.name}}</div>
