--- a/views/partials/post.hbs
+++ b/views/partials/post.hbs
@@ -39,7 +39,7 @@
                         <span class="col s4 postImg" style="background: url({{image}}) no-repeat center;"></span>
                         <span class="col s8">
                             <span class="truncate">{{title}}</span>
-                            <span class="customTruncate">{{preview_description}}</span>
+                            <span class="previewDescription">{{#truncate preview_description}}{{/truncate}}</span>
                         </span>
                     </a>
                 </p>
